--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,6 @@
+This file was created with JabRef 2.2.
+Encoding: Cp1252
+
 @STRING{addwes = {Addison-Wesley}}
 @STRING{amermathsoc = {Amer. Math. Soc.}}
 @STRING{annmathstat = {Ann. Math. Stat.}}
@@ -995,11 +998,7 @@ address={New York}
   journal = {Statistical Science},
   year = 1989,
   volume = 4,
-<<<<<<< HEAD
   pages = {341-354},
-=======
-  pages = {341-325},
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
   number = 4
 }
 
@@ -1757,11 +1756,7 @@ pages={60-63}
 
 
 @ARTICLE{Divsalar1990,
-<<<<<<< HEAD
   author = {D. Divsalar and M. K. Simon},
-=======
-  author = {D. Divsalar and M. K. Simon,},
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
   title = {Multi-symbol differential detection of {MPSK}},
   journal = ieeetc,
   year = {1990},
@@ -2887,11 +2882,7 @@ ISSN={0018-9448},}
   journal = {Signal Processing},
   year = 1994,
   pages = {463-470},
-<<<<<<< HEAD
   month={Jun.},
-=======
-  month={Feb},
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 	volume=37,
 	number=1,
   owner = {Robby},
@@ -3312,7 +3303,15 @@ year=2012,
 month={Aug},
 }
 
-<<<<<<< HEAD
+
+@unpublished{McKilliam_polycrbs_2012,
+author={R. G. McKilliam and A. Pollok},
+title={On the {C}ram\'{e}r-{R}ao bound for polynomial phase signals},
+note={submitted to {IEEE Signal Processing Letters}},
+year=2012,
+month={Aug},
+}
+
 @unpublished{McKilliam_LSU_polyest_part1_2012,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
 title={Polynomial phase estimation by phase unwrapping 1: Identifiability and strong consistency},
@@ -3329,8 +3328,6 @@ year=2012,
 month={Aug},
 }
 
-=======
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 @article{McKilliam_short_vectors_first_type_isit_2012,
 author={R. G. McKilliam and A. Grant},
 title={Finding short vectors in a lattice of {Voronoi's} first kind},
@@ -3347,7 +3344,6 @@ year=2012,
 month={Jan.}
 }
 
-<<<<<<< HEAD
 @ARTICLE{McKilliam_error_prob_An2012, 
 author={R. G. McKilliam and R. Subramanian and E. Viterbo I. V. L. Clarkson}, 
 journal=ieeetit, 
@@ -3359,20 +3355,6 @@ number=9,
 pages={5941-5949}, 
 doi={10.1109/TIT.2012.2199462}, 
 ISSN={0018-9448},}
-=======
-@unpublished{McKilliam_error_prob_An2012,
-  author    = {R. G. McKilliam and
-               R. Subramanian and
-               E. Viterbo and
-               I. V. L. Clarkson},
-  title     = {On the error performance of the ${A}_{n}$ lattices},
-  note={accepted to IEEE Trans. Inf. Th.},
-month = {Apr.},
-year      = 2012,
-doi={10.1109/TIT.2012.2199462},
-  url        = {http://arxiv.org/abs/1111.6334},
-  }
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 
 @inproceedings{Quinn_snpe_dasp_2011,
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
@@ -3873,11 +3855,7 @@ year={1974}
 
 @ARTICLE{Peleg1991_CRB_PPS_1991,
   author = {S. Peleg and B. Porat},
-<<<<<<< HEAD
   title = {The {Cram\`{e}r-Rao} lower bound for signals with constant amplitude
-=======
-  title = {The {Cramer-Rao} lower bound for signals with constant amplitude
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 	and polynomial phase},
   journal = ieeetsp,
   year = 1991,
@@ -3891,7 +3869,6 @@ file = {Peleg_CRB_polynomial_phase.pdf},
   timestamp = {2008.02.19}
 }
 
-<<<<<<< HEAD
 @ARTICLE{Porat_asympt_HAF_DPT_1996, 
 author={Porat, B. and Friedlander, B.}, 
 journal=ieeetit, title={Asymptotic statistical analysis of the high-order ambiguity function for parameter estimation of polynomial-phase signals}, 
@@ -3904,8 +3881,6 @@ keywords={Cramer-Rao bound;HAF algorithm;additive white Gaussian noise;asymptoti
 doi={10.1109/18.490563}, 
 ISSN={0018-9448},}
 
-=======
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 @ARTICLE{Peleg1991_est_class_PPS_1991,
   author = {S. Peleg and B. Porat},
   title = {Estimation and classification of polynomial-phase signals},
@@ -4148,12 +4123,7 @@ month={Dec},
 pages={1-5},
 keywords={Newton method, fast Fourier transforms, frequency estimation, FFT, Newton method, frequency estimation, monotonic function, periodogram maximization},
 doi={10.1109/GLOCOM.2008.ECP.668},
-<<<<<<< HEAD
 ISSN={1930-529X}
-=======
-ISSN={1930-529X},
-url={http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4698443} 
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 }
 
 
@@ -5137,6 +5107,20 @@ pages={531-538}
   pages = {143-152},
   number = 11,
   month = {Nov.}
+}
+
+@ARTICLE{Ristic_crbpelegcomment_1998, 
+author={B. Ristic and B. Boashash}, 
+journal=ieeetsp,
+title={Comments on "The {Cramer-Rao} lower bounds for signals with constant amplitude and polynomial phase"}, 
+year=1998, 
+month={June}, 
+volume=46, 
+number=6, 
+pages={1708-1709}, 
+keywords={Cramer-Rao lower bounds;constant amplitude polynomial phase signals;minimum lower bounds;signal definition interval;white Gaussian noise;Gaussian noise;polynomials;signal processing;white noise;}, 
+doi={10.1109/78.678501}, 
+ISSN={1053-587X}
 }
 
 @ARTICLE{Philosof_cap_dirty_paper_MAC_2007,
