--- a/robby.bib
+++ b/robby.bib
@@ -30,7 +30,14 @@
   month = {Aug}
 }
 
-<<<<<<< HEAD
+@unpublished{McKilliam_polycrbs_2012,
+  author = {R. G. McKilliam and A. Pollok},
+  title = {On the {C}ram\'{e}r-{R}ao bound for polynomial phase signals},
+  note = {submitted to {IEEE Signal Processing Letters}},
+  year = 2012,
+  month = {Aug}
+}
+
 @unpublished{McKilliam_LSU_polyest_part1_2012,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
   title = {Polynomial phase estimation by phase unwrapping 1: Identifiability and strong consistency},
@@ -47,8 +54,6 @@
   month = {Aug}
 }
 
-=======
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 @article{McKilliam_short_vectors_first_type_isit_2012,
   author = {R. G. McKilliam and A. Grant},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
@@ -70,17 +75,12 @@
   journal = ieeetit,
   title = {On the Error Performance of the $A_{n}$ Lattices},
   year = 2012,
-<<<<<<< HEAD
   month = {Sep.},
   volume = 58,
   number = 9,
   pages = {5941-5949},
   doi = {10.1109/TIT.2012.2199462},
   issn = {0018-9448}
-=======
-  doi = {10.1109/TIT.2012.2199462},
-  url = {http://arxiv.org/abs/1111.6334}
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 }
 
 @inproceedings{Quinn_snpe_dasp_2011,
