--- a/bib.bib
+++ b/bib.bib
@@ -98,6 +98,16 @@ doi={},
 ISSN={0090-6778},}
 
 
+@book{van2009empirical,
+  title={Empirical Processes in M-Estimation},
+  author={van de Geer, S.A.},
+  isbn=9780521123259,
+  series={Cambridge Series in Statistical and Probabilistic Mathematics},
+  url={http://books.google.com.au/books?id=0VEcQAAACAAJ},
+  year=2009,
+  publisher={Cambridge University Press}
+}
+
 @TECHREPORT{vanEmdeBoas1981,
   author = {P. {van Emde Boas}},
   title = {Another {NP}-complete partition problem and the complexity of computing
@@ -247,6 +257,49 @@ doi={10.1109/TAES.1986.310805},
 ISSN={0018-9251},
 file = {ABATZOGLOU_ML_chirp.pdf}
 }
+
+@ARTICLE{Ozarow_cap_level_cons_const_1990, 
+author={L. H. Ozarow and A. D. Wyner}, 
+journal=ieeetit, 
+title={On the capacity of the {Gaussian} channel with a finite number of input levels}, 
+year=1990, 
+month={Nov.}, 
+volume=36, 
+number=6, 
+pages={1426-1428}, 
+keywords={Gaussian channel;capacity;finite number of input levels;channel capacity;information theory;}, 
+doi={10.1109/18.59937}, 
+ISSN={0018-9448},}
+
+@ARTICLE{Gardner_interp_digicomms_1993, 
+author={F. M. Gardner}, 
+journal=ieeetcom, 
+title={Interpolation in digital modems {I} Fundamentals}, 
+year=1993, 
+month={Mar.}, 
+volume=41, 
+number=3, 
+pages={501-507}, 
+keywords={control method;digital modems;interpolation;signal-processing characteristics;timing adjustment;tutorial;interpolation;modems;synchronisation;}, 
+doi={10.1109/26.221081}, 
+ISSN={0090-6778}
+}
+
+@ARTICLE{ErupGardner_interp_digicomms_2_1993, 
+author={L. Erup and F. M. Gardner and R. A. Harris}, 
+journal=ieeetcom, 
+title={Interpolation in digital modems {II} Implementation and performance}, 
+year=1993, 
+month={Jun}, 
+volume=41, 
+number=6, 
+pages={998 -1008}, 
+keywords={NCO-based control method;digital modems;four-point interpolating filter;interpolators;linear interpolation;piecewise-parabolic impulse response;polynomials;simulation;interpolation;modems;}, 
+doi={10.1109/26.231921}, 
+ISSN={0090-6778}
+}
+
+
 
 @ARTICLE{Dorwart_seq_ideal_pte_1947, 
 author={H. L. Dorwart}, 
@@ -442,6 +495,26 @@ pages = {2721-2732}}
   url = {http://citeseer.ist.psu.edu/arora93hardness.html}
 }
 
+@article{Gram_discrete_polys1883,
+author={J. P. Gram},
+year=1883,
+title={Ueber die Entwickelung reeller Functionen in Reihen mittelst der Methode der kleinsten Quadrate},
+journal={Journal f\"{u}r die reine und angewandte Mathematik},
+volume=94,
+pages={41-73}
+}
+
+@article{Chebyshev_discrete_polys1864,
+author={P. Chebyshev},
+year={1864}, 
+title={Sur l'interpolation}, 
+journal={Zapiski Akademii Nauk},
+number=4, 
+volume=1,
+pages={539-560}
+}
+
+
 @article{AnzinCoxeterCoveringn13n15_2003,
 title={On Lattice Covering Density for $n = 13$ and $n = 15$},
 author={M. M. Anzin},
@@ -514,6 +587,36 @@ publisher={Springer-Verlag},
 address={New York}, 
 year=1984
 }
+
+@book{numerical_recipes_in_C_1992,
+title={Numerical recipes in C},
+author={W. H. Press and S. A. Teukolsky and W. T. Vetterling and B. P. Flannery}, 
+publisher=cup,
+year=1992
+}
+
+
+@book{Vaidyanthan_multirate_polyphase_1993,
+title={Multirate systems and filter banks},
+author={P. P. Vaidyanathan}, 
+publisher={Prentice-Hall},
+address={Englewood Cliffs, New Jersey}, 
+year=1993
+}
+
+@ARTICLE{Crochiere_polyphase_procieee_1981, 
+author={R. E. Crochiere and L. R. Rabiner}, 
+journal={Proceedings of the IEEE}, 
+title={Interpolation and decimation of digital signals: A tutorial review}, 
+year=1981, 
+month={Mar.}, 
+volume=69, 
+number=3, 
+pages={300-331}, 
+doi={10.1109/PROC.1981.11969}, 
+ISSN={0018-9219}
+}
+
 
 @article{Sloane_proj_cubic_lattice_2011,
    author = {N. J. A. Sloane and V. A. Vaishampayan and S. I. R. Costa},
@@ -640,6 +743,14 @@ publisher={Prentice-Hall},
 address={Englewood Cliffs, New Jersey}, 
 year=1973
 }
+
+@book{Bjork_num_methods_least_square_1996,
+author={A. B\"{j}orck}, 
+title={Numerical Methods for Least Squares Problems}, 
+publisher={SIAM}, 
+year=1996
+}
+
 
 @ARTICLE{Barbarossa_analysis_of_PPS_1997,
   author = {S. Barbarossa and V. Petrone},
@@ -896,6 +1007,19 @@ month={July},
 year=2007
 }
 
+@ARTICLE{Morelli_symbtime_feedforward_1997, 
+author={M. Morelli and A. N. D'Andrea and U. Mengali}, 
+journal={IEEE Communications Letters}, 
+title={Feedforward {ML}-based timing estimation with {PSK} signals}, 
+year=1997, 
+month={May}, 
+volume=1, 
+number=3, 
+pages={80-82}, 
+keywords={8-PSK;PSK signals;QPSK;feedforward structure;maximum-likelihood method;nondata-aided clock recovery scheme;nonlinearities;phase-shift keying modulation;timing estimation;computational complexity;feedforward;maximum likelihood estimation;phase shift keying;synchronisation;timing;}, 
+doi={10.1109/4234.585803}, 
+ISSN={1089-7798},}
+
 
 @ARTICLE{Morelli2000_jointphasetimingMSK,
     author = {M. Morelli and G. M. Vitetta},
@@ -907,7 +1031,33 @@ number=12,
     pages = {1997-1999}
 }
 
-@ARTICLE{Oerder_synch_square_circstat_2008, 
+@ARTICLE{Herzet_timingturbosynch_2007, 
+author={C. Herzet and H. Wymeersch and M. Moeneclaey and L. Vandendorpe}, 
+journal=ieeetcom, 
+title={On Maximum-Likelihood Timing Synchronization}, 
+year=2007, 
+month={Jun.}, 
+volume=55, 
+number=6, 
+pages={1116 -1119}, 
+keywords={bit error rate;coded burst transmission;data detection;data-aided synchronizers;decision-directed synchronizers;expectation-maximisation algorithm;maximum-likelihood estimation;mean-square estimation error;symbol timing recovery;timing synchronization;turbo coded systems;error statistics;expectation-maximisation algorithm;mean square error methods;synchronisation;turbo codes;}, 
+doi={10.1109/TCOMM.2007.898863}, 
+ISSN={0090-6778},}
+
+@ARTICLE{Herzet_turbo_synch_proc_IEEE_2007, 
+author={C. Herzet and N. Noels and V. Lottici and H. Wymeersch and M. Luise and M. Moeneclaey and L. Vandendorpe}, 
+journal={Proceedings of the IEEE}, 
+title={Code-Aided Turbo Synchronization}, 
+year=2007, 
+month={Jun.}, 
+volume=95, 
+number=6, 
+pages={1255 -1271}, 
+keywords={LDPC codes;SNR;Shannon capacity;channel code;code-aided turbo synchronization;iterative decoding;low-density parity-check codes;signal synchronization;signal-to-noise ratio;synchronization subsystems;turbo-synchronization algorithms;channel coding;iterative decoding;parity check codes;synchronisation;turbo codes;}, 
+doi={10.1109/JPROC.2007.896518}, 
+ISSN={0018-9219},}
+
+@ARTICLE{Oerder_synch_square_circstat_1988, 
 author={M. Oerder and H. Meyr}, 
 journal=ieeetcom, 
 title={Digital filter and square timing recovery}, 
@@ -1319,6 +1469,14 @@ school = {Technical University of Denmark,
 Department of Mathematics},
 } 
 
+@phdthesis{Robertson_frame_sync_phd_1995, 
+author = {P. Robertson}, 
+title = {Optimal Frame Synchronization for Continuous and Packet Data Transmission},
+year = 1995,
+month = {Apr.},
+school = {University of the Federal Armed Forces, Munich},
+} 
+
 
 @phdthesis{Clarkson_thesis, 
 author = {I. V. L. Clarkson}, 
@@ -1372,8 +1530,15 @@ file = {vaughan_clarkson_thesis.pdf}
   year = {1992},
   pages = {327-330},
   month = {August},
-  owner = {Robby},
-  timestamp = {2007.10.24}
+}
+
+@ARTICLE{QuinnFreqEstInterpl1994,
+  author = {B. G. Quinn},
+  title = {Estimating frequency by interpolation using {Fourier} coefficients},
+  journal = ieeetsp,
+  year = {1994},
+  pages = {1264-1268},
+  month = {May},
 }
 
 @ARTICLE{Clarkson1994AnalysisKaysVariance,
@@ -3295,12 +3460,30 @@ month={May},
 doi={10.1109/TSP.2012.2186444}
 }
 
+@unpublished{McKilliam_leastsqPSKpilotsdata_2012,
+author={R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+title={Carrier phase and amplitude estimation for phase shift keying using pilots and data},
+note={to be submitted to IEEE Transactions on Signal Processing},
+year=2012,
+month={Aug.}
+}
+
 @unpublished{Quinn_sparse_noisy_SSP_2012,
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
 title={Estimating Period From Sparse, Noisy Timing Data},
 note={accepted for {IEEE Statistical Signal Processing Workshop}},
 year=2012,
 month={Aug},
+}
+
+@INPROCEEDINGS{Quinn_est_per_SSP_2012, 
+author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam}, 
+booktitle={IEEE Statistical Signal Processing Workshop (SSP)}, 
+title={Estimating period from sparse, noisy timing data}, 
+year=2012, 
+month={Aug.}, 
+pages={193-196}, 
+doi={10.1109/SSP.2012.6319657}
 }
 
 
@@ -3356,13 +3539,6 @@ pages={5941-5949},
 doi={10.1109/TIT.2012.2199462}, 
 ISSN={0018-9448},}
 
-@inproceedings{Quinn_snpe_dasp_2011,
-author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-title={Estimating period from sparse, noisy timing data},
-year=2011,
-booktitle=dasp,
-month={July}
-}
 
 @inproceedings{McKilliam_direstcro_dasp_2011,
 author={R. G. McKilliam and B. G. Quinn},
@@ -3797,7 +3973,7 @@ author={P. Nielsen},
 journal=ieeetcom, 
 title={Some Optimum and Suboptimum Frame Synchronizers for Binary Data in {Gaussian} Noise}, 
 year=1973, 
-month={jun}, 
+month={Jun.}, 
 volume=21, 
 number=6, 
 pages={770-772}, 
