--- a/bib.bib
+++ b/bib.bib
@@ -3468,15 +3468,7 @@ year=2012,
 month={Aug.}
 }
 
-@unpublished{Quinn_sparse_noisy_SSP_2012,
-author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-title={Estimating Period From Sparse, Noisy Timing Data},
-note={accepted for {IEEE Statistical Signal Processing Workshop}},
-year=2012,
-month={Aug},
-}
-
-@INPROCEEDINGS{Quinn_est_per_SSP_2012, 
+@INPROCEEDINGS{Quinn_sparse_noisy_SSP_2012, 
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam}, 
 booktitle={IEEE Statistical Signal Processing Workshop (SSP)}, 
 title={Estimating period from sparse, noisy timing data}, 
