--- a/robby.bib
+++ b/robby.bib
@@ -22,12 +22,30 @@
   doi = {10.1109/TSP.2012.2186444}
 }
 
+@unpublished{McKilliam_leastsqPSKpilotsdata_2012,
+  author = {R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+  title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
+  note = {to be submitted to IEEE Transactions on Signal Processing},
+  year = 2012,
+  month = {Aug.}
+}
+
 @unpublished{Quinn_sparse_noisy_SSP_2012,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {Estimating Period From Sparse, Noisy Timing Data},
   note = {accepted for {IEEE Statistical Signal Processing Workshop}},
   year = 2012,
   month = {Aug}
+}
+
+@inproceedings{Quinn_est_per_SSP_2012,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  booktitle = {IEEE Statistical Signal Processing Workshop (SSP)},
+  title = {Estimating period from sparse, noisy timing data},
+  year = 2012,
+  month = {Aug.},
+  pages = {193-196},
+  doi = {10.1109/SSP.2012.6319657}
 }
 
 @unpublished{McKilliam_polycrbs_2012,
@@ -81,14 +99,6 @@
   pages = {5941-5949},
   doi = {10.1109/TIT.2012.2199462},
   issn = {0018-9448}
-}
-
-@inproceedings{Quinn_snpe_dasp_2011,
-  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  title = {Estimating period from sparse, noisy timing data},
-  year = 2011,
-  booktitle = dasp,
-  month = {July}
 }
 
 @inproceedings{McKilliam_direstcro_dasp_2011,
