--- a/bib.bib
+++ b/bib.bib
@@ -3503,13 +3503,16 @@ year=2012,
 month={Aug},
 }
 
-@article{McKilliam_short_vectors_first_type_isit_2012,
-author={R. G. McKilliam and A. Grant},
-title={Finding short vectors in a lattice of {Voronoi's} first kind},
-journal={International Symposium on Information Theory (ISIT)},
-year=2012,
-month={July}
-}
+@INPROCEEDINGS{McKilliam_short_vectors_first_type_isit_2012, 
+author={R. G. McKilliam and A. Grant}, 
+booktitle={IEEE International Symposium on Information Theory Proceedings (ISIT)}, 
+title={Finding short vectors in a lattice of {Voronoi's} first kind}, 
+year=2012, 
+month={July}, 
+pages={2157-2160}, 
+keywords={Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;polynomial time;short vector finding;shortest nonzero Euclidean length;weighted graph;computational complexity;computational geometry;graph theory;lattice theory;vectors;}, 
+doi={10.1109/ISIT.2012.6283833}, 
+ISSN={2157-8095},}
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
 author={J. Kodithuwakku and N. A. Letzepiz and A. Grant and R. G. McKilliam},
