--- a/robby.bib
+++ b/robby.bib
@@ -30,15 +30,7 @@
   month = {Aug.}
 }
 
-@unpublished{Quinn_sparse_noisy_SSP_2012,
-  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  title = {Estimating Period From Sparse, Noisy Timing Data},
-  note = {accepted for {IEEE Statistical Signal Processing Workshop}},
-  year = 2012,
-  month = {Aug}
-}
-
-@inproceedings{Quinn_est_per_SSP_2012,
+@inproceedings{Quinn_sparse_noisy_SSP_2012,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   booktitle = {IEEE Statistical Signal Processing Workshop (SSP)},
   title = {Estimating period from sparse, noisy timing data},
@@ -72,12 +64,16 @@
   month = {Aug}
 }
 
-@article{McKilliam_short_vectors_first_type_isit_2012,
+@inproceedings{McKilliam_short_vectors_first_type_isit_2012,
   author = {R. G. McKilliam and A. Grant},
+  booktitle = {IEEE International Symposium on Information Theory Proceedings (ISIT)},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  journal = {International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {July}
+  month = {July},
+  pages = {2157-2160},
+  keywords = {Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;polynomial time;short vector finding;shortest nonzero Euclidean length;weighted graph;computational complexity;computational geometry;graph theory;lattice theory;vectors;},
+  doi = {10.1109/ISIT.2012.6283833},
+  issn = {2157-8095}
 }
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
