added arxiv stuff

--- a/bib.bib
+++ b/bib.bib
@@ -3461,11 +3461,19 @@ doi={10.1109/TSP.2012.2186444}
 }
 
 @unpublished{McKilliam_leastsqPSKpilotsdata_2012,
-author={R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
-title={Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-note={to be submitted to IEEE Transactions on Signal Processing},
-year=2012,
-month={Aug.}
+author={R. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. G. Quinn},
+title={Carrier phase and amplitude estimation for phase shift keying using pilots and data}
+url={http://arxiv.org/abs/1011.1262v2},
+year={2013},
+month={Jan.}
+}
+
+@unpublished{McKilliam_polyest_2012,
+author={R. G. McKilliam, B. G. Quinn, I. V. L. Clarkson, B. Moran, B. N. Vellambi},
+title={Polynomial phase estimation by phase unwrapping}
+url={http://arxiv.org/abs/1011.1262v2},
+year={2012},
+month={Nov.}
 }
 
 @INPROCEEDINGS{Quinn_sparse_noisy_SSP_2012, 
