added newest icassp paper

--- a/bib.bib
+++ b/bib.bib
@@ -274,7 +274,7 @@ ISSN={0018-9448},}
 @ARTICLE{Gardner_interp_digicomms_1993, 
 author={F. M. Gardner}, 
 journal=ieeetcom, 
-title={Interpolation in digital modems {I} Fundamentals}, 
+title={Interpolation in digital modems {I}: {Fundamentals}}, 
 year=1993, 
 month={Mar.}, 
 volume=41, 
@@ -288,7 +288,7 @@ ISSN={0090-6778}
 @ARTICLE{ErupGardner_interp_digicomms_2_1993, 
 author={L. Erup and F. M. Gardner and R. A. Harris}, 
 journal=ieeetcom, 
-title={Interpolation in digital modems {II} Implementation and performance}, 
+title={Interpolation in digital modems {II}: {Implementation} and performance}, 
 year=1993, 
 month={Jun}, 
 volume=41, 
@@ -299,6 +299,23 @@ doi={10.1109/26.231921},
 ISSN={0090-6778}
 }
 
+
+@BOOK{Schliegel_Grant_coordinated_mu_2006,
+  title = {Coordinated multiuser detection},
+  year = 2006,
+  author = {C. Schlegel and A. Grant},
+  publisher = {Springer},
+  isbn = 9781402040757
+}
+
+
+@BOOK{verdu_multiuser_detection_1998,
+  title = {Multiuser detection},
+  year = 1998,
+  author = {S. Verdu},
+  publisher = cup,
+  isbn = 9780521593731
+}
 
 
 @ARTICLE{Dorwart_seq_ideal_pte_1947, 
@@ -372,6 +389,19 @@ pages={381-391}
   address = {New York},
   isbn = {0387971270}
 }
+
+@ARTICLE{Stoica_minimisation_EM_2004, 
+author={Stoica, P. and Selen, Y.}, 
+journal={IEEE Signal Processing Magazine}, 
+title={Cyclic minimizers, majorization techniques, and the expectation-maximization algorithm: a refresher}, 
+year=2004, 
+month={Jan.}, 
+volume=21, 
+number=1, 
+pages={112-114}, 
+keywords={ EM algorithm; cyclic minimizers; expectation-maximization algorithm; majorization techniques; maximum likelihood method; parameter estimation; signal processing; maximum likelihood estimation; parameter estimation; signal processing;}, 
+doi={10.1109/MSP.2004.1267055}, 
+ISSN={1053-5888},}
 
 @article{Fisher_coor_coeff_circ_data_1983,
      title = {A Correlation Coefficient for Circular Data},
@@ -3461,19 +3491,19 @@ doi={10.1109/TSP.2012.2186444}
 }
 
 @unpublished{McKilliam_leastsqPSKpilotsdata_2012,
-author={R. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. G. Quinn},
-title={Carrier phase and amplitude estimation for phase shift keying using pilots and data}
-url={http://arxiv.org/abs/1011.1262v2},
-year={2013},
+author={R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+title={Carrier phase and amplitude estimation for phase shift keying using pilots and data},
+note={submitted to IEEE Transactions on Signal Processing},
+year=2013,
 month={Jan.}
 }
 
-@unpublished{McKilliam_polyest_2012,
-author={R. G. McKilliam, B. G. Quinn, I. V. L. Clarkson, B. Moran, B. N. Vellambi},
-title={Polynomial phase estimation by phase unwrapping}
-url={http://arxiv.org/abs/1011.1262v2},
-year={2012},
-month={Nov.}
+@unpublished{McKilliam_leastsqPSKnoncoICASSP_2012,
+author={R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
+title={Noncoherent least squares estimators of carrier phase and amplitude},
+note={accepted to {IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
+year=2013,
+month={May}
 }
 
 @INPROCEEDINGS{Quinn_sparse_noisy_SSP_2012, 
@@ -3486,7 +3516,6 @@ pages={193-196},
 doi={10.1109/SSP.2012.6319657}
 }
 
-
 @unpublished{McKilliam_polycrbs_2012,
 author={R. G. McKilliam and A. Pollok},
 title={On the {C}ram\'{e}r-{R}ao bound for polynomial phase signals},
@@ -3498,7 +3527,7 @@ month={Aug},
 @unpublished{McKilliam_LSU_polyest_part1_2012,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
 title={Polynomial phase estimation by phase unwrapping 1: Identifiability and strong consistency},
-note={to be submitted to {IEEE Transactions on Signal Processing}},
+note={submitted to {IEEE Transactions on Signal Processing}},
 year=2012,
 month={Aug},
 }
@@ -3506,7 +3535,7 @@ month={Aug},
 @unpublished{McKilliam_LSU_polyest_part2_2012,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
 title={Polynomial phase estimation by phase unwrapping 2: Asymptotic normality and simulations},
-note={to be submitted to {IEEE Transactions on Signal Processing}},
+note={submitted to {IEEE Transactions on Signal Processing}},
 year=2012,
 month={Aug},
 }
